--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                    <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Strategy</h3>
@@ -84,7 +84,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/symbol-defs.svg#icon-clock"></use>
+                    <use href="./images/icons.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Punctuality</h3>
@@ -96,7 +96,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                    <use href="./images/icons.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Diligence</h3>
@@ -108,7 +108,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                    <use href="./images/icons.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Technologies</h3>
@@ -141,28 +141,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -184,28 +184,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -227,28 +227,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -270,28 +270,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -451,28 +451,28 @@
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href=""
                     ><svg class="icon-footer" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
