--- a/index.html
+++ b/index.html
@@ -432,51 +432,49 @@
     </main>
     <!------------------footer------------>
     <footer class="footer">
-      <div class="container">
-        <div class="container-footer-wrapper">
-          <div class="container-footer-logo">
-            <a class="footer-logo" href="./index.html"
-              >Web<span class="footer-web">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
+      <div class="container container-wpapper-footer">
+        <div class="container-footer-logo">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-web">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
 
-          <div class="footer-container-icon">
-            <p class="footer-title">Social media</p>
-            <ul class="icon-list-footer">
-              <li class="icon-item-footer">
-                <a class="icon-href-footer" href="">
-                  <svg class="icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item-footer">
-                <a class="icon-href-footer" href=""
-                  ><svg class="icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item-footer">
-                <a class="icon-href-footer" href="">
-                  <svg class="icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item-footer">
-                <a class="icon-href-footer" href="">
-                  <svg class="icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="footer-container-icon">
+          <p class="footer-title">Social media</p>
+          <ul class="icon-list-footer">
+            <li class="icon-item-footer">
+              <a class="icon-href-footer" href="">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a class="icon-href-footer" href=""
+                ><svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a class="icon-href-footer" href="">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a class="icon-href-footer" href="">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
